# nbo2f_analysis

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
nbo2f_analysis/: __init__.py  ce_tools.py  cell_symmetry.py  chain_geometry.py  chain_order_observer.py  structural_op_references.py
nbo2f_analysis/data/: __init__.py
nbo2f_analysis/data/ces/: paircut9_5_5_ardr_n96.ce
nbo2f_analysis/data/orbit_representatives/: MANIFEST.txt  orbit_00_sg001_P1_stab01.vasp  orbit_01_sg001_P1_stab01.vasp  orbit_02_sg144_P3_1_stab09.vasp  orbit_03_sg001_P1_stab01.vasp  orbit_04_sg005_C2_stab02.vasp  orbit_05_sg005_C2_stab02.vasp  orbit_06_sg001_P1_stab01.vasp  orbit_07_sg001_P1_stab01.vasp  orbit_08_sg001_P1_stab01.vasp  orbit_09_sg001_P1_stab01.vasp  orbit_10_sg005_C2_stab06.vasp  orbit_11_sg152_P3_121_stab54.vasp
nbo2f_analysis/rewl/: __init__.py  __main__.py  cli.py  config.py  measure.py  nbo2f.py  plots.py  postprocess.py  run.py  search.py
nbo2f_analysis/rewl/configs/: L12_pilot.yaml  L9_production.yaml  template.yaml
tests/: conftest.py  test_cell_symmetry.py  test_chain_order_observer.py  test_config.py  test_integration.py  test_measure.py  test_measurement_config.py  test_move_registry.py  test_run.py  test_search.py  test_structural_op_references.py
tests/data/: L9_minimal.yaml
